==> xingke-mo/Arduino-For-Keil/_Keilduino/Platform/STM32F4xx/Core/gpio.c <==
#include "gpio.h"

void GPIOx_Init(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin_x, PinMode_TypeDef Mode, GPIOSpeed_TypeDef GPIO_Speed_x)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    uint32_t RCC_AHB1Periph_GPIOx;
    GPIOMode_TypeDef GPIO_Mode_x;
    GPIOOType_TypeDef GPIO_OType_x;
    GPIOPuPd_TypeDef GPIO_PuPd_x;

    if(GPIOx == GPIOA)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOA;
    }
    else if(GPIOx == GPIOB)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOB;
    }
    else if(GPIOx == GPIOC)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOC;
    }
    else if(GPIOx == GPIOD)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOD;
    }
    else if(GPIOx == GPIOE)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOE;
    }
    else if(GPIOx == GPIOF)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOF;
    }
    else if(GPIOx == GPIOG)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOG;
    }
    else if(GPIOx == GPIOH)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOH;
    }
    else if(GPIOx == GPIOI)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOI;
    }
    else if(GPIOx == GPIOJ)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOJ;
    }
    else if(GPIOx == GPIOK)
    {
        RCC_AHB1Periph_GPIOx = RCC_AHB1Periph_GPIOK;
    }
    else
    {
        return;
    }

    if(Mode == INPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_IN;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(Mode == INPUT_PULLUP)
    {
        GPIO_Mode_x  = GPIO_Mode_IN;
        GPIO_PuPd_x  = GPIO_PuPd_UP;
    }
    else if(Mode == INPUT_PULLDOWN)
    {
        GPIO_Mode_x  = GPIO_Mode_IN;
        GPIO_PuPd_x  = GPIO_PuPd_DOWN;
    }
    else if(Mode == INPUT_ANALOG)
    {
        GPIO_Mode_x  = GPIO_Mode_AN;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(Mode == OUTPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT;
        GPIO_OType_x = GPIO_OType_PP;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(Mode == OUTPUT_OPEN_DRAIN)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT;
        GPIO_OType_x = GPIO_OType_OD;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(Mode == OUTPUT_AF)
    {
        GPIO_Mode_x  = GPIO_Mode_AF;
        GPIO_OType_x = GPIO_OType_PP;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else
    {
        return;
    }

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_x;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_x;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_x;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_x;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_x;

    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOx, ENABLE);
    GPIO_Init(GPIOx, &GPIO_InitStructure);
}

uint8_t GPIO_GetPortNum(uint8_t Pin)
{
    if(PIN_MAP[Pin].GPIOx == GPIOA)
    {
        return 0;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOB)
    {
        return 1;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOC)
    {
        return 2;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOD)
    {
        return 3;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOE)
    {
        return 4;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOF)
    {
        return 5;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOG)
    {
        return 6;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOH)
    {
        return 7;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOI)
    {
        return 8;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOJ)
    {
        return 9;
    }
    else if(PIN_MAP[Pin].GPIOx == GPIOK)
    {
        return 10;
    }
    else
    {
        return 0xFF;
    }
}
