==> xingke-mo/Arduino-For-Keil/_Keilduino/Platform/AT32F4xx/Core/gpio.c <==
#include "gpio.h"

void GPIOx_Init(
    GPIO_TypeDef* GPIOx,
    uint16_t GPIO_Pin_x,
    PinMode_TypeDef Mode,
    GPIOMaxSpeed_Type GPIO_Speed_x
)
{
    GPIO_InitType GPIO_InitStructure;
    uint32_t RCC_APB2PERIPH_GPIOx;
    GPIOMode_Type GPIO_Mode_x;

    if(GPIOx == GPIOA)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOA;
    }
    else if(GPIOx == GPIOB)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOB;
    }
    else if(GPIOx == GPIOC)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOC;
    }
    else if(GPIOx == GPIOD)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOD;
    }

#ifdef GPIOE
    else if(GPIOx == GPIOE)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOE;
    }

#endif /*GPIOE*/
#ifdef GPIOF
    else if(GPIOx == GPIOF)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOF;
    }

#endif /*GPIOF*/
#ifdef GPIOG
    else if(GPIOx == GPIOG)
    {
        RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOG;
    }

#endif /*GPIOG*/
    else
    {
        return;
    }

    if(Mode == INPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_FLOATING;
    }
    else if(Mode == INPUT_PULLUP)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_PU;
    }
    else if(Mode == INPUT_PULLDOWN)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_PD;
    }
    else if(Mode == INPUT_ANALOG)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_ANALOG;
    }
    else if(Mode == OUTPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT_PP;
    }
    else if(Mode == OUTPUT_OPEN_DRAIN)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT_OD;
    }
    else if(Mode == OUTPUT_AF_PP)
    {
        GPIO_Mode_x  = GPIO_Mode_AF_PP;
    }
    else if(Mode == OUTPUT_AF_OD)
    {
        GPIO_Mode_x  = GPIO_Mode_AF_OD;
    }
    else
    {
        return;
    }

    GPIO_StructInit(&GPIO_InitStructure);
    GPIO_InitStructure.GPIO_Pins = GPIO_Pin_x;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_x;
    GPIO_InitStructure.GPIO_MaxSpeed = GPIO_Speed_x;

    RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_GPIOx, ENABLE);
    GPIO_Init(GPIOx, &GPIO_InitStructure);
}

uint8_t GPIO_GetPortNum(uint8_t Pin)
{
    uint8_t retval = 0xFF;
    uint8_t index;
    GPIO_Type* GPIOx = PIN_MAP[Pin].GPIOx;

    GPIO_Type* GPIO_Map[] =
    {
        GPIOA,
        GPIOB,
        GPIOC,
        GPIOD,
#ifdef GPIOE
        GPIOE,
#endif
#ifdef GPIOF
        GPIOF,
#endif
#ifdef GPIOG
        GPIOG
#endif
    };

    for(index = 0; index < sizeof(GPIO_Map) / sizeof(GPIO_Map[0]); index++)
    {
        if(GPIOx == GPIO_Map[index])
        {
            retval = index;
            break;
        }
    }

    return retval;
}
